// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UsTnAnnualReclassificationReviewReferralRecordRaw > matches the snapshot 1`] = `
{
  "caseNotes": {
    "PRIOR RECORD OFFENSES": [
      {
        "eventDate": 2022-04-06T00:00:00.000Z,
        "noteTitle": "AGGRAVATED ASSAULT",
      },
      {
        "eventDate": 2022-06-06T00:00:00.000Z,
        "noteTitle": "CRIMINAL IMPERSONATION",
      },
    ],
    "TN, ISC, DIVERSION SENTENCES": [
      {
        "eventDate": 2022-09-06T00:00:00.000Z,
        "noteBody": "Expires: 2028-02-02",
        "noteTitle": "POSS FIREARM W/PRIOR VIOL/DEAD WPN CONV",
      },
    ],
  },
  "eligibleCriteria": {
    "custodyLevelComparedToRecommended": {
      "custodyLevel": "MINIMUM",
      "recommendedCustodyLevel": "MINIMUM",
    },
    "custodyLevelIsNotMax": null,
    "usTnAtLeast12MonthsSinceLatestAssessment": null,
  },
  "externalId": "reclass-01",
  "formInformation": {
    "currentOffenses": [
      "ROBBERY-ARMED WITH DEADLY WEAPON",
    ],
    "lastCafDate": 2022-08-22T00:00:00.000Z,
    "lastCafTotal": "8",
    "q1Score": 1,
    "q2Score": 1,
    "q3Score": 1,
    "q4Score": 1,
    "q5Score": 1,
    "q6Notes": [
      {
        "eventDate": 2022-08-22T00:00:00.000Z,
        "noteBody": "Some note",
      },
    ],
    "q6Score": 1,
    "q7Notes": [
      {
        "eventDate": 2022-08-22T00:00:00.000Z,
        "noteBody": "Some note",
      },
    ],
    "q7Score": 1,
    "q8Notes": [
      {
        "detainerFelonyFlag": true,
        "detainerMisdemeanorFlag": true,
        "detainerReceivedDate": 2022-08-22T00:00:00.000Z,
      },
    ],
    "q8Score": 1,
    "q9Score": 1,
  },
  "formReclassificationDueDate": 2023-12-01T00:00:00.000Z,
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "metadata": {},
  "stateCode": "US_TN",
}
`;

exports[`UsTnAnnualReclassificationReviewReferralRecordRaw > matches the snapshot without caseNotes 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "custodyLevelComparedToRecommended": {
      "custodyLevel": "MINIMUM",
      "recommendedCustodyLevel": "MINIMUM",
    },
    "custodyLevelIsNotMax": null,
    "usTnAtLeast12MonthsSinceLatestAssessment": null,
  },
  "externalId": "reclass-01",
  "formInformation": {
    "currentOffenses": [
      "ROBBERY-ARMED WITH DEADLY WEAPON",
    ],
    "lastCafDate": 2022-08-22T00:00:00.000Z,
    "lastCafTotal": "8",
    "q1Score": 1,
    "q2Score": 1,
    "q3Score": 1,
    "q4Score": 1,
    "q5Score": 1,
    "q6Notes": [
      {
        "eventDate": 2022-08-22T00:00:00.000Z,
        "noteBody": "Some note",
      },
    ],
    "q6Score": 1,
    "q7Notes": [
      {
        "eventDate": 2022-08-22T00:00:00.000Z,
        "noteBody": "Some note",
      },
    ],
    "q7Score": 1,
    "q8Notes": [
      {
        "detainerFelonyFlag": true,
        "detainerMisdemeanorFlag": true,
        "detainerReceivedDate": 2022-08-22T00:00:00.000Z,
      },
    ],
    "q8Score": 1,
    "q9Score": 1,
  },
  "formReclassificationDueDate": 2023-12-01T00:00:00.000Z,
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "metadata": {},
  "stateCode": "US_TN",
}
`;
